feat: add theme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <div class="digitalwatch bg-white flex-column rounded-4 p-3 d-flex justify-content-center align-items-center"
          id="digitalwatch">
+        <div class="themecolor bg-dark m-2 rounded-3 d-flex flex-row gap-3 justify-content-center align-items-center"
+             id="themecolor">
+
+
+        </div>
         <div class="monthandyear text-white m-1 rounded-2 d-flex gap-2 justify-content-center align-items-center">
             <span class="" id="month"></span>
             <span class="" id="year"></span>
